AWW-1439_Add_close_button Fixed visibility depending on width screen

--- a/src/containers/app/scss/components/form-group-app.scss
+++ b/src/containers/app/scss/components/form-group-app.scss
@@ -111,8 +111,12 @@
     	padding: 10px;
 		
 		&.current-account {
+			display: none;
 			top: 9px;
 			right: 12px;
+			@media (max-width: 768px) {
+				display: block;
+			}
 		}
 
 		i {
